feat: modif pages

--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Discord API</title>
-    <link rel="stylesheet" href="./src/style.css">
+    <link href="/src/styles/style.css" rel="stylesheet">
 </head>
 <body>
-ffe
+<main>
+    <img src="/src/img/logo.png" alt="logo">
+    <h1 id="title"></h1>
+    <div class="wrapper">
+        <div>
+            <h2>Dev connecté :</h2>
+            <ul id="userList">
+            </ul>
+        </div>
+        <div>
+            <h2>Channel du serveur :</h2>
+            <ul id="channelList">
+
+            </ul>
+        </div>
+    </div>
+</main>
 </body>
 <script src="./scripts/main.js"></script>
 </html>
