feat: modif pages

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Discord API</title>
-    <link href="/src/styles/style.css" rel="stylesheet">
+    <link href="./src/styles/style.css" rel="stylesheet">
 </head>
 <body>
 <main>
-    <img src="/src/img/logo.png" alt="logo">
+    <img src="./src/img/logo.png" alt="logo">
     <h1 id="title"></h1>
     <div class="wrapper">
         <div>
